--- a/css/shop.css
+++ b/css/shop.css
@@ -159,7 +159,7 @@ max-width:100px ;
 
 .drop-down-menu {
     display: flex;
-    font-size: 1.2rem;
+    font-size: 1vw;
     font-family: "Noto+Sans+TC";
     font-weight: 900;
     
@@ -193,7 +193,7 @@ ul.drop-down-menu>li {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    font-size: .8rem;
+    font-size: clamp(12px, 1vw, 18px);
     width: 100%;
     padding: 3vw;
 
@@ -229,6 +229,7 @@ border-bottom:var(--block_brown) solid 1px
     justify-content: end;
     padding-top: 0.6vh;
     z-index: 99;
+    cursor: default;
     /* background-color: #E1CBAA; */
 
 }
@@ -292,7 +293,7 @@ border-bottom:var(--block_brown) solid 1px
     justify-items: center; /* 水平居中所有网格项 */
    
 }
-@media (max-width: 1175px) {
+@media (max-width: 1178px) {
     .items_list {
         padding-left: 170px;
         padding-right: 170px;
