--- a/css/Customization.css
+++ b/css/Customization.css
@@ -1849,15 +1849,30 @@ body {
     cursor: pointer;
 }
 
-#select_field2__second_page_p1 {
+#select_field2_divtext {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+#select_field2_Filling {
     display: flex;
     justify-content: center;
-    margin: 17px 151px 22px 120px;
+
     font-size: 24px;
     font-family: "Noto Sans HK";
     font-weight: 600;
     color: #3F1A09;
+}
 
+#select_field2_hint {
+    font-size: 12px;
+    font-family: "Noto Sans HK";
+    font-weight: 400;
+    color: #3F1A09;
 }
 
 #select_field2__second_page_p2,
@@ -1906,22 +1921,39 @@ body {
     z-index: 1;
 }
 
-#select_field3__second_page p {
+#select_field3_textDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+
+#select_field3_template {
     display: flex;
     justify-content: center;
-    margin: 16px 151px 0px 120px;
     font-size: 24px;
     font-family: "Noto Sans HK";
     font-weight: 600;
     color: #3F1A09;
 }
 
+#select_field3_hint {
+    font-size: 12px;
+    font-family: "Noto Sans HK";
+    font-weight: 400;
+    color: #3F1A09;
+}
+
+
+
 #select_field3__second_page_div {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     border: 0px solid #444;
-    padding: 30px 0;
     /* overflow: scroll; */
 }
 
@@ -2042,20 +2074,23 @@ body {
 
 
 #center_display_second_page_box2 {
-    width: 155px;
-    height: 174px;
+    width: 90%;
 }
 
 #center_display_second_page_box_slab {
     position: absolute;
-    width: 80%;
-    left: 2%;
+    width: 55%;
+    left: 16%;
     top: 10%;
 }
 
 #center_display_second_page_box_slab img {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    left: 10%;
+    top: 10px;
+    width: 80%;
+    /* height: 100%; */
+
 }
 
 
@@ -3598,7 +3633,7 @@ footer .logo {
 #Checkout_area_product_display_hr_2 {
     /* padding: 0 3% 0 22%; */
 
-    margin-bottom: 20%;
+    margin-bottom: 10%;
     padding: 0 3%;
 }
 
@@ -4469,11 +4504,11 @@ footer .logo {
 #box_picture_details,
 #box_picture_details2 {
     display: flex;
-    margin-left: 2%;
+    /* margin-left: 2%; */
 }
 
 #full_list_box_right_order_box img {
-    width: 70%;
+    width: 50%;
 }
 
 #full_list_box_right_order_box_p {
